--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/sp41414/TOP-projects/issues"
   },
-  "homepage": "https://github.com/sp41414/TOP-projects#readme"
+  "homepage": "https://github.com/sp41414/TOP-projects#readme",
+  "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
+    "prettier": "3.6.2"
+  }
 }
