--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "eslint": "^9.37.0",
-    "globals": "^16.4.0",
-    "prettier": "3.6.2"
+    "globals": "^16.4.0"
   }
 }
