--- a/projects/javascript/weather-api/package.json
+++ b/projects/javascript/weather-api/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.4",
+    "schema-utils": "^4.3.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
